# rust-clean-arch

./: .env.sample  Cargo.toml  Makefile  README.md  docker-compose.yml
cfn/: Cargo.toml
cfn/src/: main.rs
migrations/: 20240504184155_create_user.sql
src/: main.rs
src/application/: Cargo.toml
src/application/src/: lib.rs  session_service.rs  user_service.rs
src/controller/: Cargo.toml
src/controller/src/: user_controller.rs
src/domain/: Cargo.toml
src/domain/src/: session.rs  user.rs
src/infrastructure/: Cargo.toml
src/infrastructure/src/: db.rs  lib.rs  session_repository.rs  user_repository.rs
